# CodeAct-MCP

./: .env.example  .gitignore  CodeAct_Agent.ipynb  README.md  config.yaml  langgraph.json  llms.json  pyproject.toml  utils.py
lib/: __init__.py  oss_uploader.py
libs/ptc-cli/ptc_cli/streaming/: executor.py
libs/ptc-cli/tests/integration_tests/: test_session_persistence_real.py
libs/ptc-cli/tests/unit_tests/: test_input_completers.py
mcp_servers/: __init__.py
src/agent/: __init__.py  agent.py  config.py
src/agent/backends/: daytona.py
src/agent/prompts/: __init__.py  base.py  general.py  task_workflow.py
src/agent/prompts/templates/components/: subagent_coordination.md.j2
src/agent/subagents/: __init__.py  general.py  research.py
src/agent/tools/: __init__.py
src/agent/tools/bash/: __init__.py  execute.py
src/agent/tools/code_execution/: execute.py
src/agent/tools/filesystem/: __init__.py  file_ops.py
src/agent/tools/research/: tavily.py
src/agent/tools/search/: __init__.py  glob.py  grep.py  semantic_tools.py
src/codeact_mcp/: __init__.py  config.py  mcp_registry.py  sandbox.py  session.py  tool_generator.py  tool_indexer.py
tests/: test_agent_prompt.py  test_bash_tool.py  test_execute_code_oss.py  test_filesystem_tools.py  test_grep_glob_sandbox.py  test_mcp_tool_transformation.py  test_search_effectiveness.py  test_semantic_search.py  test_tool_exposure_modes.py
